<resources>
    <string name="app_name">Instagram2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="small_avatar">Small Avatar</string>
    <string name="avatar">Avatar</string>
    <string name="user_name">Do Hoang Son</string>
    <string name="user_bio">drice_mo bahnrsn...</string>
    <string name="share_profile">Share Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="post_number">1</string>
    <string name="followers_number">5</string>
    <string name="following_number">6</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="post">Posts</string>
    <string name="user_id">drice_mo</string>
    <string name="time">2 days ago</string>
    <string name="caption">Gia đình cần tìm cháu Lương Ngọc Phúc.</string>
    <string name="user_id_caps">DRICE_MO</string>
    <string name="post_icon">Post Icon</string>
    <string name="tag_post_icon">Tag Post Icon</string>
    <string name="post_pic">Post Picture</string>
    <string name="threads">Threads</string>
    <string name="lock">Lock</string>
    <string name="dots">dots</string>
    <string name="lines">Lines</string>
    <string name="new_post">New Post</string>
    <string name="arrow">Arrow</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="likes">nhphast: 20 midterm...\nall comments\n2 days ago</string>
    <string name="name1">drice_mo \nHanoi</string>
    <string name="name2">keria \nSeoul</string>
</resources>